--- a/src/app/speech/containers/view-speech/view-speech.component.scss
+++ b/src/app/speech/containers/view-speech/view-speech.component.scss
@@ -3,7 +3,7 @@
 
 /* TABS */
 .tabs {
-  padding: 0 30px;
+  padding: 0 17px;
 
   select {
     @include max-media(991px) {
